@@ -17,6 +17,8 @@ Features added
 * C++, add a ``cpp:expr`` role for inserting inline C++ expressions or types.
 * #3638: Allow to change a label of reference to equation using
   ``math_eqref_format``
+* Add ``top-classes`` option for the ``sphinx.ext.inheritance_diagram``
+  extension to limit the scope of inheritance graphs.
 
 Features removed
 ----------------
@@ -52,7 +54,9 @@ Bugs fixed
 
 Testing
 --------
+
 * Add tests for the ``sphinx.ext.inheritance_diagram`` extension.
+
 
 Release 1.6.3 (in development)
 ==============================
